[gd_scene load_steps=8 format=2]

[ext_resource path="res://Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://HUD.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 50
font_data = ExtResource( 1 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Health" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -45.0
margin_bottom = 78.0
custom_colors/font_color = Color( 0.74902, 0.0862745, 0.0862745, 1 )
custom_fonts/font = SubResource( 1 )
text = "3"

[node name="ShipNumber" type="Label" parent="."]
margin_left = 256.0
margin_top = 1.0
margin_right = 301.0
margin_bottom = 79.0
custom_fonts/font = SubResource( 2 )
text = "5"

[node name="Message" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -379.5
margin_top = -120.0
margin_right = 379.5
margin_bottom = 120.0
custom_colors/font_color = Color( 0.847059, 0.4, 0.101961, 1 )
custom_fonts/font = SubResource( 3 )
text = "Destroy the Red ships.
Find the treasure.
Enjoy!"
align = 1

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -233.0
margin_top = -200.0
margin_right = 251.0
margin_bottom = -100.0
custom_fonts/font = SubResource( 4 )
text = "Start"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="EnemiesText" type="Label" parent="."]
margin_right = 256.0
margin_bottom = 78.0
custom_fonts/font = SubResource( 1 )
text = "Enemies: "

[node name="Label" type="Label" parent="."]
margin_left = 783.0
margin_top = -3.0
margin_right = 970.0
margin_bottom = 75.0
custom_colors/font_color = Color( 0.839216, 0.0509804, 0.0509804, 1 )
custom_fonts/font = SubResource( 1 )
text = "Health:"

[node name="Time" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -35.0
margin_right = 35.0
margin_bottom = 61.0
custom_colors/font_color = Color( 0.156863, 0.745098, 0.415686, 1 )
custom_fonts/font = SubResource( 5 )
text = "30"

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
